<resources>
    <string name="app_name">TechnicalTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Username_anda">Username Anda</string>
    <string name="password_anda">Password Anda</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="button_masuk">MASUK</string>
    <string name="desk_masuk">Masuk</string>
    <string name="title_masuk">Masuk</string>
    <string name="image_alfagift">Image Alfagift</string>

    <string name="cs_telkomsel">CS Telkomsel</string>
    <string name="no_hp">085748767698</string>
    <string name="image_person">image_person</string>
    <string name="button_edit">Button Edit</string>
    <string name="button_clear">Button Clear</string>
    <string name="contact_list">Contact List</string>
    <string name="button_back">Button Back</string>
    <string name="disabled">Masuk</string>
    <string name="name_mahasiswa">Nama Mahasiswa</string>
    <string name="alamat_mahasiswa">Alamat Mahasiswa</string>
</resources>